@@ -260,8 +260,6 @@ excludefile($filename)
 is_udeb($package)
 	Returns true if the package is marked as a udeb in the control
 	file.
-udeb_filename($package)
-	Returns the filename of the udeb package.
 getpackages($type)
 	Returns a list of packages in the control file.
 	Pass "arch" or "indep" to specify arch-dependent or
