@@ -23,6 +23,9 @@ debhelper (9.20150811+unreleased) UNRELEASED; urgency=medium
   * d/control: Remove the homepage field.
   * dh: Make dh_strip_nondeterminism optional, so debhelper
     does not need to build-depend on it.
+  * dh_builddeb: Let dpkg figure out the filename of udebs
+    itself.  (Closes: #516721, #677353)
+  * Dh_Lib: Drop now unused udeb_filename subroutine.
 
   [ Paul Tagliamonte ]
   * dh_gencontrol: Put debug debs back in the "debug" section.
